2005-10-16  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	A data/ephy-xml2ini.xsl:
	* src/ephy-extensions-manager.c:

	Remove .xml parsing code and translate the .xml files to
	the new format with XSLT instead.

2005-10-16  Peter Harvey <pah06@uow.edu.au>

	H18 patch, by Peter Harvey <pah06@uow.edu.au>.
	
	* data/ui/epiphany-bookmark-editor-ui.xml:
	* data/ui/epiphany-ui.xml:
	* lib/egg/egg-editable-toolbar.c: (get_dock_position),
	(get_toolbar_position), (get_toolbar_nth), (find_action),
	(drag_data_delete_cb), (drag_begin_cb), (drag_end_cb),
	(drag_data_get_cb), (move_item_cb), (set_dock_visible),
	(remove_item_cb), (remove_toolbar_cb), (toggle_visibility_cb),
	(egg_editable_toolbar_add_visibility_items),
	(egg_editable_toolbar_add_popup_items), (popup_context_menu_cb),
	(button_press_event_cb), (configure_item_sensitivity),
	(configure_item_cursor), (connect_widget_signals),
	(action_sensitive_cb), (create_item_from_action),
	(create_item_from_position), (toolbar_drag_data_received_cb),
	(toolbar_drag_drop_cb), (toolbar_drag_motion_cb),
	(toolbar_drag_leave_cb), (configure_drag_dest), (create_dock),
	(toolbar_changed_cb), (unparent_fixed), (update_fixed),
	(toolbar_added_cb), (toolbar_removed_cb), (item_added_cb),
	(item_removed_cb), (egg_editable_toolbar_construct),
	(egg_editable_toolbar_set_ui_manager),
	(egg_editable_toolbar_set_property),
	(egg_editable_toolbar_get_property), (egg_editable_toolbar_init),
	(egg_editable_toolbar_finalize),
	(egg_editable_toolbar_get_edit_mode),
	(egg_editable_toolbar_set_edit_mode),
	(egg_editable_toolbar_set_fixed):
	* lib/egg/egg-editable-toolbar.h:
	* lib/egg/egg-toolbar-editor.c: (compare_items),
	(item_added_or_removed_cb), (toolbar_removed_cb),
	(egg_toolbar_editor_set_model), (egg_toolbar_editor_finalize),
	(drag_begin_cb), (drag_end_cb), (drag_data_get_cb),
	(editor_create_item), (editor_create_item_from_name),
	(append_table), (update_editor_sheet), (egg_toolbar_editor_init):