@@ -1,3 +1,9 @@
+2005-10-17  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* src/Makefile.am:
+
+	Fix the check-python-binding makefile target to work properly
+
 2005-10-16  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/Makefile.am:
